@@ -1,9 +1,7 @@
-
 package controllers.popups;
 
 import controllers.gen.popups.PopupConsultaControllerGen;
-			
+
 public class PopupConsultaController extends PopupConsultaControllerGen {
 
 }
-		
