@@ -22,17 +22,17 @@
 				     campo:'Consulta', 
 				     id:'consultasdb', 
 				     idEntidad:'idConsulta', 
-				     popupBorrar:'popupConsultas', 
-				     popupCrear:'popupConsultas', 
-				     popupEditar:'popupConsultas', 
-				     popupLeer:'popupConsultas', 
+				     popupBorrar:'PopUpConsultas', 
+				     popupCrear:'PopUpConsultas', 
+				     popupEditar:'PopUpConsultas', 
+				     popupLeer:'PopUpConsultas', 
 				     saveEntity:false, 
 				     tipoContainer:'pagina', 
 				     titulo:'Consultas', 
-				     urlBorrar:play.mvc.Router.reverse("popups.popupConsultasController.index" , ['accion':'borrar', 'idConsulta':consulta?.id? consulta?.id:'_idConsulta_']), 
-				     urlCrear:play.mvc.Router.reverse("popups.popupConsultasController.index" , ['accion':'crear']), 
-				     urlEditar:play.mvc.Router.reverse("popups.popupConsultasController.index" , ['accion':'editar', 'idConsulta':consulta?.id? consulta?.id:'_idConsulta_']), 
-				     urlLeer:play.mvc.Router.reverse("popups.popupConsultasController.index" , ['accion':'leer', 'idConsulta':consulta?.id? consulta?.id:'_idConsulta_']), 
+				     urlBorrar:play.mvc.Router.reverse("popups.PopUpConsultasController.index" , ['accion':'borrar', 'idConsulta':consulta?.id? consulta?.id:'_idConsulta_']), 
+				     urlCrear:play.mvc.Router.reverse("popups.PopUpConsultasController.index" , ['accion':'crear']), 
+				     urlEditar:play.mvc.Router.reverse("popups.PopUpConsultasController.index" , ['accion':'editar', 'idConsulta':consulta?.id? consulta?.id:'_idConsulta_']), 
+				     urlLeer:play.mvc.Router.reverse("popups.PopUpConsultasController.index" , ['accion':'leer', 'idConsulta':consulta?.id? consulta?.id:'_idConsulta_']), 
 				     urlRedirigir:play.mvc.Router.reverse("ConsultasBBDDController.index" , ['accion':'editar']), 
 				     urlTabla:@ConsultasBBDDController.tablaconsultasdb()
 				}
